# MRMiniChallenges

./: README.md
MCH1_WS/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
MCH1_WS/install/signal_processing/share/signal_processing/: package.sh
MCH1_WS/log/: latest_build  latest_list
MCH1_WS/src/signal_processing/: package.xml  setup.py
MCH1_WS/src/signal_processing/launch/: signal_processing_launch.py
MCH1_WS/src/signal_processing/signal_processing/: process.py  signal_generator.py
mch1cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mch1cpp/install/signal_processing_cpp/lib/signal_processing_cpp/: process  signal_generator
mch1cpp/log/: latest_build  latest_list
mch1cpp/src/signal_processing_cpp/: CMakeLists.txt  package.xml
mch1cpp/src/signal_processing_cpp/launch/: signal_processing_launch.xml
mch1cpp/src/signal_processing_cpp/src/: process.cpp  signal_generator.cpp
ros2_ws/install/: setup.bash  setup.sh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/basic_comms/: package.xml  setup.py
ros2_ws/src/basic_comms/basic_comms/: listener.py
ros2_ws/src/basic_comms/launch/: activity1_launch.py
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/motor_control/: setup.py
ros2_ws/src/motor_control/config/: controller_params.yaml
ros2_ws/src/motor_control/launch/: challenge_launch.py  motor_launch.py
ros2_ws/src/motor_control/motor_control/: controller.py  dc_motor.py  set_point.py
(+62 files in other folders)
